--- a/wine-for-noobs/index.html
+++ b/wine-for-noobs/index.html
@@ -3,9 +3,9 @@
   <head>
     <!-- Page setup -->
     <meta charset="utf-8">
-    <title>Your title here</title>
-    <meta name="description" content="A brief description of your site for search engines">
-    <meta name="author" content="Information about the author here">
+    <title>Wine for Noobs</title>
+    <meta name="description" content="Learn to use Windows binaries under the Wine compatibility layer for Gnu/Linux">
+    <meta name="author" content="Kaas">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"/>
     <link rel="icon" type="image/png" href="favicon.png">
   
